# ChangeLog for net-firewall/conntrack-tools
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack-tools/ChangeLog,v 1.48 2012/08/24 13:57:55 jer Exp $

  24 Aug 2012; Jeroen Roovers <jer@gentoo.org> conntrack-tools-1.2.2.ebuild:
  Marked ~hppa (bug #432380).

*conntrack-tools-1.2.2 (23 Aug 2012)

  23 Aug 2012; Jeroen Roovers <jer@gentoo.org> +conntrack-tools-1.2.2.ebuild:
  Version bump by Kerin Millar (bug #417939).

  02 May 2012; Jeff Horelick <jdhore@gentoo.org> conntrack-tools-0.9.14.ebuild,
  conntrack-tools-1.0.0.ebuild, conntrack-tools-1.0.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  14 Feb 2012; Jeroen Roovers <jer@gentoo.org> -conntrack-tools-0.9.9.ebuild:
  Old.

*conntrack-tools-1.0.1 (05 Jan 2012)

  05 Jan 2012; Tim Harder <radhermit@gentoo.org> +conntrack-tools-1.0.1.ebuild:
  Version bump. Update to EAPI 4.

  26 Aug 2011; Matt Turner <mattst88@gentoo.org> conntrack-tools-0.9.9.ebuild,
  conntrack-tools-0.9.14.ebuild, conntrack-tools-1.0.0.ebuild:
  Add flex and bison to DEPEND, bug 378343.

*conntrack-tools-1.0.0 (23 May 2011)

  23 May 2011; Jeroen Roovers <jer@gentoo.org> +conntrack-tools-1.0.0.ebuild:
  Version bump thanks to Lorand Kelemen (bug #328859).

  06 Oct 2010; Jeroen Roovers <jer@gentoo.org>
  conntrack-tools-0.9.14.ebuild:
  Stable for HPPA (bug #320219).

  08 Jul 2010; Raúl Porcel <armin76@gentoo.org>
  conntrack-tools-0.9.14.ebuild:
  sparc stable wrt #320219

  30 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  conntrack-tools-0.9.14.ebuild:
  x86 stable wrt bug #320219

  25 May 2010; Pacho Ramos <pacho@gentoo.org> conntrack-tools-0.9.14.ebuild:
  stable amd64, bug 320219

  17 May 2010; Wolfram Schlich <wschlich@gentoo.org>
  -files/conntrack-tools-0.9.11-INT_MAX.patch, -files/conntrackd.confd,
  -files/conntrackd.initd, -conntrack-tools-0.9.6-r1.ebuild,
  -conntrack-tools-0.9.11.ebuild, -conntrack-tools-0.9.12.ebuild,