@@ -1,6 +1,12 @@
 # ChangeLog for net-firewall/conntrack-tools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack-tools/ChangeLog,v 1.48 2012/08/24 13:57:55 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack-tools/ChangeLog,v 1.49 2012/09/06 14:36:40 jer Exp $
+
+*conntrack-tools-1.2.2-r1 (06 Sep 2012)
+
+  06 Sep 2012; Jeroen Roovers <jer@gentoo.org>
+  +conntrack-tools-1.2.2-r1.ebuild, +files/conntrackd.initd-r2:
+  Remove TCP window tracking check (bug #405919).
 
   24 Aug 2012; Jeroen Roovers <jer@gentoo.org> conntrack-tools-1.2.2.ebuild:
   Marked ~hppa (bug #432380).
